2001-03-16  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m-antenna.el (w3m-antenna-sort-function): Removed.
	(w3m-antenna-sort-changed-sites-function): New variable.
	(w3m-antenna-sort-unchanged-sites-function): Ditto.
	(w3m-antenna-sort-sites-by-time): Refer time, when size
	modification detected.
	(w3m-about-antenna): Use new variables.

2001-03-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-time.el (w3m-time-rules): Don't use backquote.
	(w3m-time-zoneinfo): Ditto.
	(w3m-time-parse-integer): Ditto.

2001-03-16  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (TopLevel): Require `w3m-time'.
	(w3m-w3m-attributes): Use `w3m-time-parse-string' instead of
	`parse-time-string'.

	* w3m-time.el: Import parse-time.el of T-gnus and rename it.

	* w3m-antenna.el: Use `w3m-time-parse-string' instead of
	`parse-time-string'.

2001-03-16  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-e21.el (w3m-create-image): Changed arguments spec,
	that `accept-type-regexp' is removed.

	* w3m-xmas.el (w3m-create-image): Ditto.

2001-03-16  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el: Arrived URL database format is changed and code to get
	headers and to retrieve contents is cleaned up.
	(w3m-attributes, w3m-local-attributes): New function.
	(w3m-w3m-attributes): Old name is `w3m-w3m-check-header'.
	(w3m-content-type): Use `w3m-attributes'.
	(w3m-content-charset, w3m-content-length, w3m-content-encoding,
	w3m-last-modified): New macro.
	(w3m-retrieve, w3m-local-retrieve): Changed arguments spec, that
	`accept-type-regexp' is removed.
	(w3m-w3m-retrieve): Likewise and call `w3m-w3m-attributes' instead
	of `w3m-w3m-check-header'.
	(w3m-exec): Follow change of arguments spec of `w3m-retrieve'.
	(w3m-about-source, w3m-about-header): Changed arguments spec that
	`accept-type-regexp' is removed and follow change of arguments
	spec of w3m-retrieve.
	(w3m-arrived-last-modified): New function.